--- a/GeoMapConverter.csproj
+++ b/GeoMapConverter.csproj
@@ -79,22 +79,23 @@
     <Compile Include="Utils\SerializationUtils.cs" />
     <Compile Include="Utils\ListUtils.cs" />
     <Compile Include="Utils\StringUtils.cs" />
-    <Compile Include="VatsimGeoMapSet\BcgMenu.cs" />
-    <Compile Include="VatsimGeoMapSet\BcgMenuLabel.cs" />
-    <Compile Include="VatsimGeoMapSet\Element.cs" />
-    <Compile Include="VatsimGeoMapSet\ElementDefaults.cs" />
-    <Compile Include="VatsimGeoMapSet\FilterMenu.cs" />
-    <Compile Include="VatsimGeoMapSet\GeoMap.cs" />
-    <Compile Include="VatsimGeoMapSet\GeoMapObject.cs" />
-    <Compile Include="VatsimGeoMapSet\GeoMapSet.cs" />
-    <Compile Include="VatsimGeoMapSet\Line.cs" />
-    <Compile Include="VatsimGeoMapSet\LineDefaults.cs" />
-    <Compile Include="VatsimGeoMapSet\LineStyle.cs" />
-    <Compile Include="VatsimGeoMapSet\Symbol.cs" />
-    <Compile Include="VatsimGeoMapSet\SymbolDefaults.cs" />
-    <Compile Include="VatsimGeoMapSet\SymbolStyle.cs" />
-    <Compile Include="VatsimGeoMapSet\Text.cs" />
-    <Compile Include="VatsimGeoMapSet\TextDefaults.cs" />
+    <Compile Include="Vatsim\BcgMenu.cs" />
+    <Compile Include="Vatsim\BcgMenuItem.cs" />
+    <Compile Include="Vatsim\Element.cs" />
+    <Compile Include="Vatsim\ElementDefaults.cs" />
+    <Compile Include="Vatsim\Enum\LineStyle.cs" />
+    <Compile Include="Vatsim\Enum\SymbolStyle.cs" />
+    <Compile Include="Vatsim\FilterMenu.cs" />
+    <Compile Include="Vatsim\FilterMenuItem.cs" />
+    <Compile Include="Vatsim\GeoMap.cs" />
+    <Compile Include="Vatsim\GeoMapObject.cs" />
+    <Compile Include="Vatsim\GeoMapSet.cs" />
+    <Compile Include="Vatsim\Line.cs" />
+    <Compile Include="Vatsim\LineDefaults.cs" />
+    <Compile Include="Vatsim\Symbol.cs" />
+    <Compile Include="Vatsim\SymbolDefaults.cs" />
+    <Compile Include="Vatsim\Text.cs" />
+    <Compile Include="Vatsim\TextDefaults.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
